force-app/main/default/objects/Product2/fields/FinalPrice__c.field-meta.xml
<CustomField>
    <fullName>FinalPrice__c</fullName>
    <formula>CASE(
    Quality__c,
    &quot;Low&quot;, UnitPrice__c * 0.8,
    &quot;Standard&quot;, UnitPrice__c,
    &quot;High&quot;, UnitPrice__c * 1.2,
    UnitPrice__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>